--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^0.14.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "better-scroll": "^1.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
